--- a/CopyFiles_ConsoleApp/CopyFiles_ConsoleApp.csproj
+++ b/CopyFiles_ConsoleApp/CopyFiles_ConsoleApp.csproj
@@ -42,11 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileOperations.cs" />
+    <Compile Include="LogOperations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsConfiguration.cs" />
+    <Compile Include="UserSettings.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="UserSettings.settings" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
